syntax = "proto3";

package netsvr.sessionInfoResp;

import "reCtx.proto";

option go_package = "internal/protocol;protocol";

//worker响应网关中的session信息到business
message SessionInfoResp {
  //req（request）、resp（response）时候的上下文，worker会原样回传给business
  netsvr.reCtx.ReCtx reCtx = 1;
  //连接的session id
  uint32 sessionId = 2;
  //客户登录后，存储在网关中的信息，如果未登录，则是空字符串
  string userInfo = 3;
  //客户在业务系统中的唯一id
  string userId = 4;
  //客户是否登录成功
  bool loginStatus = 5;
  //客户订阅的主题
  repeated string topics = 6;
}